# DoodleJump

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
import/: FetchSFML.cmake
src/: Boost.cpp  Boost.hpp  Core.cpp  Core.hpp  Data.cpp  Data.hpp  Doodle.cpp  Doodle.hpp  Engine.cpp  Engine.hpp  Platform.cpp  Platform.hpp  Score.cpp  Score.hpp  Sound.cpp  Sound.hpp  Tile.cpp  Tile.hpp  main.cpp
